overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guitartortona-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        environment: staging
    spec:
      containers:
        - name: app
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
