overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guitartortona-api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: guitar-ca-issuer
    nginx.ingress.kubernetes.io/limit-rps: "100"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api-staging.guitar.lab
      secretName: guitar-wildcard-tls
  rules:
    - host: api-staging.guitar.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guitartortona-api
                port:
                  number: 8080
